// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncomingBox renders a crowding view missing crowding data 1`] = `
<div
  className="m-incoming-box"
>
  <div
    className="mock-tippy"
  >
    <div
      className="mock-tippy-content"
    >
      <b>
        Block:
      </b>
       
      G111-165
      <br />
      <b>
        Run:
      </b>
       
      1056
      <br />
      <b>
        Vehicle:
      </b>
       
      0654
      <br />
      <b>
        Variant:
      </b>
       
      5
      <br />
      <b>
        Adherence:
      </b>
       
      0 min early
      <br />
      <b>
        Operator:
      </b>
       
      <span
        className="fs-mask"
      >
        OPPIE OPERATOR #1
      </span>
    </div>
    <button
      className="m-incoming-box__vehicle "
      onClick={[Function]}
    >
      <div
        className="m-incoming-box__vehicle-icon"
      >
        <svg
          style={
            Object {
              "height": 15.2,
              "width": 16.72,
            }
          }
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <g
            className="c-vehicle-icon c-vehicle-icon--small"
          >
            <g
              className="m-ladder__crowding m-ladder__crowding--no-data"
              transform="scale(0.38) translate(-24,-30)"
            >
              <rect
                fill="transparent"
                height="52"
                width="52"
                x="-2"
                y="-2"
              />
              <path
                d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
              />
              <circle
                cx="6.74"
                cy="8.54"
                r="4.93"
              />
              <path
                d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
              />
              <circle
                cx="23.88"
                cy="8.48"
                r="4.93"
              />
              <path
                d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
              />
              <circle
                cx="41.03"
                cy="8.48"
                r="4.93"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        className="m-incoming-box__vehicle-label"
      >
        ?/?
      </div>
    </button>
  </div>
</div>
`;

exports[`IncomingBox renders a crowding view of a vehicle 1`] = `
<div
  className="m-incoming-box"
>
  <div
    className="mock-tippy"
  >
    <div
      className="mock-tippy-content"
    >
      <b>
        Block:
      </b>
       
      G111-165
      <br />
      <b>
        Run:
      </b>
       
      1056
      <br />
      <b>
        Vehicle:
      </b>
       
      0654
      <br />
      <b>
        Variant:
      </b>
       
      5
      <br />
      <b>
        Adherence:
      </b>
       
      0 min early
      <br />
      <b>
        Operator:
      </b>
       
      <span
        className="fs-mask"
      >
        OPPIE OPERATOR #1
      </span>
    </div>
    <button
      className="m-incoming-box__vehicle "
      onClick={[Function]}
    >
      <div
        className="m-incoming-box__vehicle-icon"
      >
        <svg
          style={
            Object {
              "height": 15.2,
              "width": 16.72,
            }
          }
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <g
            className="c-vehicle-icon c-vehicle-icon--small"
          >
            <g
              className="m-ladder__crowding m-ladder__crowding--empty"
              transform="scale(0.38) translate(-24,-30)"
            >
              <rect
                fill="transparent"
                height="52"
                width="52"
                x="-2"
                y="-2"
              />
              <path
                d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
              />
              <circle
                cx="6.74"
                cy="8.54"
                r="4.93"
              />
              <path
                d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
              />
              <circle
                cx="23.88"
                cy="8.48"
                r="4.93"
              />
              <path
                d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
              />
              <circle
                cx="41.03"
                cy="8.48"
                r="4.93"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        className="m-incoming-box__vehicle-label"
      >
        0/18
      </div>
    </button>
  </div>
</div>
`;

exports[`IncomingBox renders a ghost 1`] = `
<div
  className="m-incoming-box"
>
  <div
    className="mock-tippy"
  >
    <div
      className="mock-tippy-content"
    >
      <b>
        Block:
      </b>
       
      G111-165
      <br />
      <b>
        Run:
      </b>
       
      1056
      <br />
      <b>
        Vehicle:
      </b>
       
      N/A
      <br />
      <b>
        Variant:
      </b>
       
      5
      <br />
      <b>
        Adherence:
      </b>
       
      N/A
      <br />
      <b>
        Operator:
      </b>
       
      <span
        className="fs-mask"
      >
        N/A
      </span>
    </div>
    <button
      className="m-incoming-box__vehicle "
      onClick={[Function]}
    >
      <div
        className="m-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 15.2,
              "width": 16.72,
            }
          }
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--small ghost early-red"
          >
            <g
              transform="scale(0.26599999999999996) translate(-24,-23)"
            >
              <path
                className="c-vehicle-icon__ghost-highlight"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
              <path
                className="c-vehicle-icon__ghost-body"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
            </g>
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={3.5999999999999996}
            >
              5
            </text>
          </g>
        </svg>
      </div>
      <svg
        className="c-icon-alert-circle"
        viewBox="-3 -3 54 54"
      >
        <g
          className="c-icon-alert-circle--highlighted"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </svg>
      <div
        className="m-incoming-box__vehicle-label"
      >
        1056
      </div>
    </button>
  </div>
</div>
`;

exports[`IncomingBox renders a vehicle 1`] = `
<div
  className="m-incoming-box"
>
  <div
    className="mock-tippy"
  >
    <div
      className="mock-tippy-content"
    >
      <b>
        Block:
      </b>
       
      G111-165
      <br />
      <b>
        Run:
      </b>
       
      1056
      <br />
      <b>
        Vehicle:
      </b>
       
      0654
      <br />
      <b>
        Variant:
      </b>
       
      5
      <br />
      <b>
        Adherence:
      </b>
       
      0 min early
      <br />
      <b>
        Operator:
      </b>
       
      <span
        className="fs-mask"
      >
        OPPIE OPERATOR #1
      </span>
    </div>
    <button
      className="m-incoming-box__vehicle "
      onClick={[Function]}
    >
      <div
        className="m-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 15.2,
              "width": 16.72,
            }
          }
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--small on-time early-red"
          >
            <path
              className="c-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(0.38) rotate(0) translate(-24,-22)"
            />
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={5.6}
            >
              5
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-incoming-box__vehicle-label"
      >
        1056
      </div>
    </button>
  </div>
</div>
`;

exports[`IncomingBox renders a vehicle with the opposite incoming direction ID 1`] = `
<div
  className="m-incoming-box"
>
  <div
    className="mock-tippy"
  >
    <div
      className="mock-tippy-content"
    >
      <b>
        Block:
      </b>
       
      block
      <br />
      <b>
        Run:
      </b>
       
      run
      <br />
      <b>
        Vehicle:
      </b>
       
      vehicle
      <br />
      <b>
        Variant:
      </b>
       
      X
      <br />
      <b>
        Adherence:
      </b>
       
      0 min early
      <br />
      <b>
        Operator:
      </b>
       
      <span
        className="fs-mask"
      >
        Fake Operator #1234
      </span>
    </div>
    <button
      className="m-incoming-box__vehicle "
      onClick={[Function]}
    >
      <div
        className="m-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 15.2,
              "width": 16.72,
            }
          }
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--small on-time early-red"
          >
            <path
              className="c-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(0.38) rotate(180) translate(-24,-22)"
            />
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="hanging"
              textAnchor="middle"
              x={0}
              y={-5.6}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-incoming-box__vehicle-label"
      >
        run
      </div>
    </button>
  </div>
</div>
`;

exports[`IncomingBox renders empty state 1`] = `
<div
  className="m-incoming-box"
/>
`;
